--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app), using the [Redux](https://redux.js.org/) and [Redux Toolkit](https://redux-toolkit.js.org/) template.",
   "main": "index.js",
   "devDependencies": {
-    "jest": "^28.1.3"
+    "gh-pages": "^4.0.0",
+    "jest": "^28.1.3",
+    "netlify-cli": "^10.12.1"
   },
   "keywords": [],
   "author": "",
